o Added profile to test already installed/deployed Maven distro
git-svn-id: https://svn.apache.org/repos/asf/maven/core-integration-testing/trunk@963239 13f79535-47bb-0310-9956-ffa450edef68